<resources>
    <string name="app_name">SUPER Mobile</string>
    <string name="app_name_full">SUPER (Survey Product Erela) App</string>
    <string name="language">en</string>

    <!-- Login Screen -->
    <string name="welcome_login">Welcome back!</string>
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>

    <!-- Generic String -->
    <string name="cancel_confirmation">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="refresh">Refresh Location</string>
    <string name="setNewLocation">Set New Location</string>

    <!-- Menu -->
    <string name="home">Home</string>
    <string name="erela_corp">Erlangga Edi Laboratories Corporation</string>
    <string name="super_desc">Created to help the sales team survey with marketing team regarding Erela products that have been distributed.</string>
    <string name="work_with_erela">Work with ERELA</string>
    <string name="erela_slogan">With the slogan &quot;Stay Healthy with Us&quot;, PT ERELA will always be your health friend by providing good quality health products.</string>
    <string name="read_more">Read more</string>
    <string name="list_customer">Customers</string>
    <string name="survey_add">Start</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>

    <!-- Outlets Menu -->
    <string name="outlet">Outlets/Customers</string>
    <string name="search_outlet">Search Outlet Name</string>

    <!-- Outlet Detail -->
    <string name="outlet_detail_title">Outlet Info</string>
    <string name="outlet_detail_name">Outlet Name</string>
    <string name="outlet_detail_type">Outlet Type</string>
    <string name="outlet_detail_address">Address</string>
    <string name="outlet_detail_pic_number">PIC Number</string>
    <string name="outlet_detail_phone_number">Outlet\'s Phone Number</string>
    <string name="outlet_detail_village">Village</string>
    <string name="outlet_detail_sub_district">Sub-District</string>
    <string name="outlet_detail_city_regency">City/Regency</string>
    <string name="outlet_detail_province">Province</string>
    <string name="outlet_detail_location">Location</string>
    <string name="map_location">Maps</string>
    <string name="map_click_caption">Tap on the map to open map details</string>

    <!-- Add New Outlet -->
    <string name="add_outlet_title">Add New Outlet</string>

    <!-- Edit Outlet -->
    <string name="edit_outlet_title">Edit Outlet</string>

    <!-- Start Survey Menu -->
    <string name="start_survey_title">Surveys</string>
    <string name="start_survey_now">Start Survey Now!</string>
    <string name="continue_survey">Continue Last Checked In Survey</string>
    <string name="today_survey">Today\'s Survey Tracking</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="check_in_title">Check In</string>
    <string name="choose_outlet">Choose Outlet</string>
    <string name="check_in_photo">Check In Photo</string>

    <string name="take_photo">Take Photo Now!</string>

    <string name="rewards">Rewards</string>
    <string name="is_any_reward">Are there any rewards?</string>
    <string name="reward_photo">Reward Photo</string>
    <string name="reward_proof_photo">Reward Proof Photo</string>
    <string name="note_no_reward">Note</string>
    <string name="check_out_title">Check Out</string>
    <string name="check_out_photo">Check Out Photo</string>

    <!-- Survey Detail -->
    <string name="survey_detail_title">Survey Detail</string>
    <string name="survey_data">Survey Data</string>
    <string name="surveyors">Surveyor</string>
    <string name="reward_note">Reward Note</string>
    <string name="reward_photos">Reward Photos</string>
    <string name="survey_answer">Answer</string>

    <!-- Survey History Menu -->
    <string name="history_survey">Survey History</string>
    <string name="filter_survey">Filter</string>

    <!-- History Filter -->
    <string name="by_date">By Date</string>
    <string name="range_select">Select Date Range</string>

    <!-- Profile Menu -->
    <string name="signout_text">Sign Out</string>
    <string name="profile_info">Profile Information</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="team_branch_text">Team Branch</string>
</resources>