<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.DetailOutletActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:scaleType="center"
        android:src="@drawable/primary_gradient_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/toolbar_header_background"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/outletName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="125dp"
                android:textColor="@color/text_primary_color"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="APOTEK BOROBUDUR SEMARANG" />

            <TextView
                android:id="@+id/outletID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/custom_toast_font_success"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="ID: 00.XX-00000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/outlet_detail_address"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary_color"
                android:textSize="14sp"
                tools:text="Jl. Borobudur Utara Raya No.18, Manyaran, Kec. Semarang Barat, Kota Semarang, Jawa Tengah 50147" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/outlet_detail_village"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary_color"
                android:textSize="14sp"
                tools:text="Manyaran" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/outlet_detail_sub_district"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary_color"
                android:textSize="14sp"
                tools:text="Semarang Barat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/outlet_detail_city_regency"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cityRegency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary_color"
                android:textSize="14sp"
                tools:text="Kota Semarang" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/outlet_detail_province"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:textColor="@color/text_primary_color"
                android:textSize="14sp"
                tools:text="Jawa Tengah" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/map_location"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/mapContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="25dp"
                app:cardElevation="4dp"
                app:strokeWidth="0dp">

                <com.mapbox.mapboxsdk.maps.MapView
                    android:id="@+id/mapPreview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:cameraZoom="15"
                    map:liteMode="true"
                    map:mapType="normal" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/map_pin_icon"
                    tools:ignore="ContentDescription" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="56dp"
                android:text="@string/map_click_caption"
                android:textAlignment="center"
                android:textColor="@color/text_primary_color"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mmin18.widget.RealtimeBlurView
                android:id="@+id/realtimeBlurView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:realtimeBlurRadius="50dp"
                app:realtimeOverlayColor="#66FFFFFF" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:fontFamily="@font/nucleo"
                    android:gravity="center"
                    android:text="@string/outlet_detail_title"
                    android:textColor="@color/text_primary_color"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/backButton"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="50dp"
                    app:contentPadding="16dp"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbarTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/toolbarTitle"
                    app:strokeWidth="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/baseline_arrow_back_ios_new_24"
                        tools:ignore="ContentDescription" />
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>