<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CheckOutFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/nucleo"
        android:text="@string/outlet_detail_location"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="25dp"
        app:cardElevation="2dp"
        app:strokeWidth="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.mapbox.mapboxsdk.maps.MapView
                android:id="@+id/mapPreview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                map:cameraZoom="15"
                map:liteMode="true"
                map:mapType="normal" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:src="@drawable/map_pin_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/refreshButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="50dp"
                app:cardElevation="0dp"
                app:contentPadding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="21dp"
                        android:layout_height="21dp"
                        android:src="@drawable/refresh_icon"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:fontFamily="@font/nucleo"
                        android:text="@string/refresh" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nucleo"
        android:text="@string/check_out_photo"
        android:textColor="@color/text_primary_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/photoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/photoPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="75dp"
            tools:ignore="ContentDescription"
            tools:src="@drawable/image_placeholder" />

        <ImageView
            android:id="@+id/photoPreview"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:visibility="gone"
            tools:ignore="ContentDescription"
            tools:src="@drawable/igun_cantik" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/takePhotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="150dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="2dp"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@drawable/camera_icon"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/nucleo"
                android:gravity="center"
                android:text="@string/take_photo"
                android:textColor="@color/text_primary_color"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>